<resources>
    <string name="app_name">authorizationApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smile_text">Смейся и улыбайся каждый день</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="phone">Номер телефона</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="createPassword">Создать пароль</string>
    <string name="enterPassword">Придумайте пароль</string>
    <string name="reenterPassword">Повторите пароль</string>
    <string name="next">Далее</string>
    <string name="resetPassword">Сброс пароля</string>
    <string name="message">На вашу почту «%s» было отправлено письмо</string>
    <string name="wrong_login">Неверный логин или пароль</string>
</resources>